# ShortsCreator

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
assets/music/: music_manifest.json
deploy/: Dockerfile
docs/: ANALYSIS_SIGNAL_ACTIVATION_V2.md  AV_SYNC_RANDOM_CUT_BOUNDARY_FIX_V2.md  BOBA_CANDIDATE_CLIP_DISCOVERY_V1.md  BOBA_CLIP_BRIEF_GENERATOR_V1.md  BOBA_CLIP_RANKING_BRAIN_V1.md  BOBA_CORE_BRAIN_V1.md  BOBA_CREATIVE_DIRECTOR_V2.md  BOBA_EDITORIAL_DECISION_ENGINE_V1.md  BOBA_EXPLANATION_ENGINE_V1.md  BOBA_MEMORY_SYSTEM_V1.md  BOBA_SCOUT_CREATIVE_DIRECTOR_V1.md  BOBA_WHOLE_VIDEO_UNDERSTANDING_V1.md  CAPTIONS_TYPOGRAPHY_V2.md  CLIP_BOUNDARY_QUALITY_STORY_COMPLETENESS_V2.md  COPYRIGHT_SAFETY_CHECKER_V2.md  CREATOR_PERSONALIZATION_V2.md  CURATED_MUSIC_LIBRARY_V2.md  DURABLE_JOB_QUEUE_RESUME_V2.md  DURABLE_RESTART_RESUME_PROOF_V2.md  FINAL_RELEASE_VALIDATION_V2.md  INTERNET_TREND_RESEARCH_V2.md  LINK_INGESTION_V2.md  LIVE_RUNTIME_INTERNET_TREND_PROVIDER_V2.md  LONG_VIDEO_FULL_RENDER_PROOF_V2.md  LONG_VIDEO_VALIDATION_V2.md  MOTION_GRAPHICS_EFFECTS_V2.md  MULTI_SPEAKER_LAYOUT_V2.md  MUSIC_INTELLIGENCE_V2.md  OLYMPUS_V2_RELEASE_CANDIDATE_QA.md  OLYMPUS_V2_RELEASE_NOTES_DRAFT.md  REAL_FACE_TRACKING_MOTION_VALIDATION_V2.md  REAL_MULTI_SPEAKER_LAYOUT_VALIDATION_V2.md  REAL_RENDERING_E2E_VALIDATION_V2.md  REAL_YOUTUBE_LINK_VALIDATION_FIX_V2.md  RENDER_CHECKPOINT_ARTIFACT_HANDOFF_V2.md  RND_BOBA_INTEGRATED_VALIDATION.md  RUNTIME_VALIDATION_V2.md  TEST_ASSETS_AND_OPTIONAL_DEPENDENCIES_V2.md  TITLE_DESCRIPTION_HASHTAG_V2.md  monitoring.md  (+1 more)
docs/architecture/: PROJECT-OLYMPUS-PHASE-1-PROMPT-2-REVIEW.md  PROJECT-OLYMPUS-PHASE-2-PROMPT-10-ORCHESTRATION.md  PROJECT-OLYMPUS-PHASE-2-PROMPT-3-COGNITION.md  PROJECT-OLYMPUS-PHASE-2-PROMPT-4-VISUAL-LANGUAGE-BIBLE.md  PROJECT-OLYMPUS-PHASE-2-PROMPT-5-PRODUCTION-PIPELINE.md  PROJECT-OLYMPUS-PHASE-2-PROMPT-6-STORY-UNDERSTANDING.md  PROJECT-OLYMPUS-PHASE-2-PROMPT-7-VIRALITY-AND-HOOKS.md  PROJECT-OLYMPUS-PHASE-2-PROMPT-8-EDITING-DECISIONS.md  PROJECT-OLYMPUS-PHASE-2-PROMPT-9-CREATOR-PARTNERSHIP.md  PROJECT-OLYMPUS.md
docs/engineering/: PROJECT-OLYMPUS-PHASE-3A-MVP-ARCHITECTURE.md  PROJECT-OLYMPUS-PHASE-3A-PROMPT-2-TECH-STACK.md
frontend/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  vitest.config.ts
frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/src/components/: AppShell.tsx  BackendStatus.tsx  (+5 more)
src/olympus/: __init__.py  dependencies.py
tests/: __init__.py  conftest.py
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_analysis.py  test_analysis_signals.py  test_api_contract.py  test_av_sync_boundaries.py  test_av_sync_real_readiness.py  test_boba_candidate_clip_discovery.py  test_boba_clip_brief_generator.py  test_boba_clip_ranking.py  test_boba_core.py  test_boba_creative_director_v2.py  test_boba_editorial_decision.py  test_boba_explanation_engine.py  test_boba_memory.py  test_boba_scout_creative_director.py  test_boba_whole_video_understanding.py  test_caption_typography.py  test_chaos.py  test_clip_boundary_quality.py  test_config.py  test_copyright_safety.py  test_creator_personalization.py  test_dependencies.py  test_durable_jobs.py  test_durable_restart_resume_validation.py  test_editing.py  test_event_bus.py  test_face_tracking_motion_validation.py  test_final_release_validation.py  test_health.py  test_link_validation.py  test_live_trend_provider.py  test_long_video_full_render_validation.py  test_long_video_validation.py  test_monitoring.py  test_motion_effects.py  test_multi_speaker_layout.py  test_multi_speaker_layout_validation.py  test_music_intelligence.py  test_music_library.py  test_music_manifest_assets.py  (+18 more)
tools/: __init__.py  diagnose_transcription.py  install_editing_assets.py  install_music_assets.py  manage_jobs.py  manage_music_library.py  validate_analysis_signals.py  validate_av_sync_boundaries.py  validate_boba_candidate_clip_discovery.py  validate_boba_clip_brief_generator.py  validate_boba_clip_ranking.py  validate_boba_core.py  validate_boba_creative_director_v2.py  validate_boba_editorial_decision.py  validate_boba_explanation_engine.py  validate_boba_memory.py  validate_boba_scout_creative_director.py  validate_boba_whole_video_understanding.py  validate_caption_typography.py  validate_clip_boundary_quality.py  validate_copyright_safety.py  validate_creator_personalization.py  validate_durable_jobs.py  validate_durable_restart_resume.py  validate_face_tracking_motion.py  validate_final_release.py  validate_link_ingestion.py  validate_live_trend_provider.py  validate_long_video.py  validate_long_video_full_render.py  validate_motion_effects.py  validate_multi_speaker_layout.py  validate_music_intelligence.py  validate_olympus_v2_release_candidate.py  validate_real_rendering_e2e.py  validate_real_video_flow.py  validate_render_checkpoint_handoff.py  validate_rnd_boba_integrated.py  validate_runtime_flow.py  validate_test_assets_dependencies.py  (+2 more)
(+368 files in other folders)
