[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "olympus"
version = "0.1.0"
description = "Project Olympus - AI Creative Studio that turns long-form video into premium Shorts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Project Olympus Engineering" }]

# Runtime dependencies. Versions are pinned to compatible ranges, favouring
# mature, well-supported releases per the Technology Constitution (boring on
# purpose everywhere except the product).
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "structlog>=24.1,<25.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "celery[redis]>=5.4,<6.0",
    "redis>=5.0,<6.0",
    "httpx>=0.27,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "boto3>=1.34,<2.0",
]

[project.optional-dependencies]
# Real speech-to-text. Heavy (CTranslate2 + model weights), so it is an opt-in
# extra: deployments that want clip generation install `olympus[transcription]`
# and set OLYMPUS_AI__TRANSCRIPTION_PROVIDER=faster-whisper. The base image stays
# lean and starts fine with the default `noop` provider.
transcription = [
    "faster-whisper>=1.0,<2.0",
]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "anyio>=4.4,<5.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
]

[project.scripts]
# Operational convenience entry points (not required to run the services).
olympus-api = "olympus.apps.backend_api.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/olympus"]

# --------------------------------------------------------------------------- #
# Tooling configuration
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# A pragmatic, strict-but-not-pedantic rule set.
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008"]  # FastAPI uses callables in argument defaults (Depends()).

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # asserts are expected in tests.

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["olympus"]

# Third-party libraries that ship no type stubs / py.typed marker. Treating their
# imports as untyped here keeps `strict` honest for our own code without polluting
# the report with unactionable missing-stub noise.
[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*", "celery.*", "psutil.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
